tests/dataset/tpc-ds/compiler/c/q22.error
/tmp/TestCCompiler_TPCDS_Goldenq223461719465/001/prog.c: In function ‘test_TPCDS_Q22_average_inventory’:
/tmp/TestCCompiler_TPCDS_Goldenq223461719465/001/prog.c:258:20: error: incompatible types when initializing type ‘const char *’ using type ‘tmp_item_t’
  258 |                    (tmp_item_t){.i_product_name = "Prod2",
      |                    ^
/tmp/TestCCompiler_TPCDS_Goldenq223461719465/001/prog.c:265:55: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  265 |   if (test_TPCDS_Q22_average_inventory_qoh.len != tmp1.len) {
      |                                                       ^
      |                                                       ->
/tmp/TestCCompiler_TPCDS_Goldenq223461719465/001/prog.c:269:64: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  269 |       if (test_TPCDS_Q22_average_inventory_qoh.data[i3] != tmp1.data[i3]) {
      |                                                                ^
      |                                                                ->
/tmp/TestCCompiler_TPCDS_Goldenq223461719465/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq223461719465/001/prog.c:339:42: error: incompatible types when assigning to type ‘list_int’ from type ‘qoh_item_list_t’
  339 |   test_TPCDS_Q22_average_inventory_qoh = qoh;
      |                                          ^~~
